--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,19 @@
     padding: 10px 10px;
 }
 
+.rodape{
+    background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.titulo_rodape{
+    text-transform: uppercase;
+    font-family: 'Tomorrow', sans-serif;
+    font-weight: 400;
+    font-size: 9px;
+    color: #D9115A;
+}
+
