--- a/css/tecnologia.css
+++ b/css/tecnologia.css
@@ -22,3 +22,33 @@ header nav li {
 header nav a {
     color: #000000;
     text-decoration: none;
+}
+    
+    section {
+        padding: 50px;
+    }
+    
+    section h2 {
+        margin-top: 0;
+    }
+    
+    section p {
+        margin-bottom: 30px;
+    }
+    
+    section figure {
+        margin-bottom: 50px;
+    }
+    
+    section figcaption {
+        font-style: italic;
+        text-align: center;
+    }
+    
+    
+    footer {
+        background-color: #333;
+        color: #fff;
+        padding: 20px;
+        text-align: center;
+    }
