--- a/css/games.css
+++ b/css/games.css
@@ -67,3 +67,57 @@
     font-size: 9px;
     color: #D9115A;
 }
+
+@media screen and (max-width: 810px) {
+    .fundo_conteudo{
+        height: 500px;
+    }
+
+    .titulo_txt{
+        /* background-color: antiquewhite; */
+        width: 100%;
+        height: 60%;
+    }
+
+    .titulo_section{
+        font-size: 22px;
+        padding-bottom: 15px;
+    }
+
+    .txt_section{
+        font-size: 13px;
+    }
+
+    .wrap_conteudo{
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .fundo_conteudo{
+        height: 500px;
+    }
+
+    .titulo_txt{
+        /* background-color: antiquewhite; */
+        width: 100%;
+        height: 60%;
+    }
+
+    .figure_section{
+        height: 40%;
+    }
+
+    .titulo_section{
+        font-size: 18px;
+        padding-bottom: 15px;
+    }
+
+    .txt_section{
+        font-size: 10px;
+    }
+
+    .wrap_conteudo{
+        flex-direction: column;
+    }
+}
